--- a/src/views/second.html
+++ b/src/views/second.html
@@ -6,8 +6,9 @@
     <link href="styles/style.css" rel="stylesheet"/>
 </head>
 <body>
-  <h1>Hello World!</h1>
-  <a href="/second">second</a>
-  <script src="scripts/main.js"></script>
+  <h1>Hello World123213!</h1>
+  <script src="scripts/main2.js"></script>
+  <script src="scripts/main3.js"></script>
+
 </body>
 </html>
