--- a/src/views/index.html
+++ b/src/views/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <h1>Hello World!</h1>
-  <a href="/second">second</a>
+  <a href="/second"></a>
   <script src="scripts/main.js"></script>
 </body>
 </html>
